--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "sass": "^1.77.8",
     "unplugin-auto-import": "^0.18.2",
+    "unplugin-element-plus": "^0.8.0",
     "unplugin-vue-components": "^0.27.3",
     "vite": "^5.3.1"
   }
